[gd_scene load_steps=28 format=2]

[ext_resource path="res://pics/background.jpg" type="Texture" id=1]
[ext_resource path="res://fonts/BeVietnamPro-SemiBold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://fonts/BeVietnamPro-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://fonts/BeVietnamPro-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://sound/mouse_click.wav" type="AudioStream" id=6]
[ext_resource path="res://sences/Login.gd" type="Script" id=7]
[ext_resource path="res://pics/close_button.png" type="Texture" id=8]
[ext_resource path="res://pics/nentrang.png" type="Texture" id=9]
[ext_resource path="res://sound/mouse_click.mp3" type="AudioStream" id=11]

[sub_resource type="DynamicFont" id=1]
size = 50
outline_size = 2
outline_color = Color( 0.537255, 0.556863, 0.415686, 1 )
extra_spacing_top = 1
extra_spacing_space = 2
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 27
outline_size = 3
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=6]

[sub_resource type="DynamicFont" id=3]
size = 25
extra_spacing_top = 15
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 0.992157, 0.992157, 1 )

[sub_resource type="DynamicFont" id=7]
size = 24
outline_size = 1
outline_color = Color( 0.0117647, 0.0117647, 0.0117647, 1 )
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.231373, 0.215686, 0.215686, 1 )

[sub_resource type="StyleBoxFlat" id=13]
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.231373, 0.215686, 0.215686, 1 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.231373, 0.215686, 0.215686, 1 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.231373, 0.215686, 0.215686, 1 )

[sub_resource type="StyleBoxFlat" id=16]
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.231373, 0.215686, 0.215686, 1 )

[sub_resource type="DynamicFont" id=10]
size = 70
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=20]
resource_name = "run"
tracks/0/type = "bezier"
tracks/0/path = NodePath("txt_Hoten:rect_position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 800, -0.25, 0, 0.25, 0, 271, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("txt_MSSV:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 800, -0.25, 0, 0.25, 0, 365, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("lbl_title:rect_position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 800, -0.25, 0, 0.25, 0, 182, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("lbl_MSSV:rect_position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 800, -0.25, 0, 0.25, 0, 382, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("lbl_Hoten:rect_position:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 800, -0.25, 0, 0.25, 0, 285, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("but_login:rect_position:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 800, -0.25, 0, 0.25, 0, 475, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("but_clear:rect_position:y")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 800, -0.25, 0, 0.25, 0, 477, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}

[node name="Login" type="Node2D"]
script = ExtResource( 7 )

[node name="bg_login" type="TextureRect" parent="."]
modulate = Color( 0.505882, 0.729412, 0.937255, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1200.0
margin_bottom = 700.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_title" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 350.0
margin_top = 800.0
margin_right = 980.0
margin_bottom = 868.0
custom_colors/font_color = Color( 0.992157, 1, 0, 1 )
custom_colors/font_outline_modulate = Color( 0.184314, 0.172549, 0.172549, 1 )
custom_fonts/font = SubResource( 1 )
text = "Điền thông tin Sinh viên"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_Hoten" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 232.0
margin_top = 800.0
margin_right = 378.0
margin_bottom = 850.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Họ và tên : "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_MSSV" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 232.0
margin_top = 800.0
margin_right = 374.0
margin_bottom = 850.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Mã số SV :"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txt_Hoten" type="TextEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 380.0
margin_top = 800.0
margin_right = 958.0
margin_bottom = 859.0
theme = SubResource( 6 )
custom_colors/font_color = Color( 0.109804, 0.105882, 0.105882, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/read_only = SubResource( 18 )
custom_styles/normal = SubResource( 4 )
bookmark_gutter = true
context_menu_enabled = false
shortcut_keys_enabled = false
virtual_keyboard_enabled = false
selecting_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txt_MSSV" type="TextEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 379.0
margin_top = 800.0
margin_right = 957.0
margin_bottom = 859.0
custom_colors/selection_color = Color( 0.266667, 0.247059, 0.247059, 1 )
custom_colors/font_color = Color( 0.184314, 0.168627, 0.168627, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/read_only = SubResource( 19 )
custom_styles/normal = SubResource( 5 )
bookmark_gutter = true
context_menu_enabled = false
shortcut_keys_enabled = false
virtual_keyboard_enabled = false
selecting_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="but_login" type="ToolButton" parent="."]
margin_left = 373.0
margin_top = 800.0
margin_right = 570.0
margin_bottom = 849.0
custom_colors/font_color = Color( 0.992157, 1, 0, 1 )
custom_fonts/font = SubResource( 7 )
custom_styles/pressed = SubResource( 12 )
custom_styles/disabled = SubResource( 13 )
custom_styles/normal = SubResource( 11 )
shortcut_in_tooltip = false
action_mode = 0
text = "Đăng nhập"
flat = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="but_clear" type="ToolButton" parent="."]
margin_left = 753.0
margin_top = 800.0
margin_right = 950.0
margin_bottom = 849.0
custom_colors/font_color = Color( 0.945098, 1, 0, 1 )
custom_colors/font_color_hover = Color( 1, 0.984314, 0.984314, 1 )
custom_fonts/font = SubResource( 7 )
custom_styles/hover = SubResource( 14 )
custom_styles/pressed = SubResource( 15 )
custom_styles/disabled = SubResource( 16 )
custom_styles/normal = SubResource( 17 )
text = "Làm lại"
flat = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="sound_click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="error" type="TextureRect" parent="."]
visible = false
modulate = Color( 0.701961, 0.690196, 0.690196, 1 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_top = 570.0
margin_right = 1200.0
margin_bottom = 1003.0
rect_scale = Vector2( 1, 0.15 )
texture = ExtResource( 9 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="error_label" type="Label" parent="error"]
margin_left = 282.0
margin_top = 80.0005
margin_right = 1727.0
margin_bottom = 175.0
rect_scale = Vector2( 0.5, 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="error_close" type="ToolButton" parent="error"]
margin_left = 1137.0
margin_top = 33.333
margin_right = 2417.0
margin_bottom = 1189.33
rect_scale = Vector2( 0.05, 0.3 )
mouse_default_cursor_shape = 2
icon = ExtResource( 8 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fadein" type="AnimationPlayer" parent="."]
anims/run = SubResource( 20 )

[connection signal="button_up" from="but_login" to="." method="_on_but_login_button_up"]
[connection signal="button_up" from="but_clear" to="." method="_on_but_clear_button_up"]
[connection signal="button_up" from="error/error_close" to="." method="_on_error_close_button_up"]
